--- a/front-end/src/app/layout/main-layout/main-layout.component.html
+++ b/front-end/src/app/layout/main-layout/main-layout.component.html
@@ -1,1 +1,13 @@
-<p>main-layout works!</p>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" opened>
+    <app-sidenav></app-sidenav>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <app-header (toggleSidenav)="sidenav.toggle()"></app-header>
+
+    <main class="content">
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
