--- a/front-end/src/app/layout/header/header.component.scss
+++ b/front-end/src/app/layout/header/header.component.scss
@@ -7,7 +7,7 @@ mat-toolbar {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 2000; // Increased z-index to be above sidenav
 }
 
 button {
