--- a/front-end/src/app/layout/header/header.component.html
+++ b/front-end/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
   </button>
 
   <mat-menu #userMenu="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item routerLink="/profile">
       <mat-icon>person</mat-icon>
       <span>Profile</span>
     </button>
