--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -7,18 +7,18 @@
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline">
-          <mat-label>Username</mat-label>
-          <input matInput formControlName="username" placeholder="Enter your username">
-          <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
-            Username is required
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email" placeholder="Enter your email" type="email">
+          <mat-error *ngIf="loginForm.get('email')?.invalid">
+            {{ getErrorMessage('email') }}
           </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
           <input matInput type="password" formControlName="password" placeholder="Enter your password">
-          <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-            Password is required
+          <mat-error *ngIf="loginForm.get('password')?.invalid">
+            {{ getErrorMessage('password') }}
           </mat-error>
         </mat-form-field>
 
