--- a/front-end/src/app/features/employees/add-employee-dialog/add-employee-dialog.component.html
+++ b/front-end/src/app/features/employees/add-employee-dialog/add-employee-dialog.component.html
@@ -47,9 +47,10 @@
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
-    <button mat-button type="button" (click)="onCancel()">Cancel</button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="!employeeForm.valid">
-      Add Employee
+    <button mat-button type="button" (click)="onCancel()" [disabled]="isLoading">Cancel</button>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!employeeForm.valid || isLoading">
+      <mat-spinner diameter="20" *ngIf="isLoading" class="spinner-button"></mat-spinner>
+      <span *ngIf="!isLoading">Add Employee</span>
     </button>
   </mat-dialog-actions>
 </form>
