--- a/front-end/src/app/features/employees/add-employee-dialog/add-employee-dialog.component.html
+++ b/front-end/src/app/features/employees/add-employee-dialog/add-employee-dialog.component.html
@@ -35,6 +35,11 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Phone</mat-label>
+      <input matInput formControlName="phone" placeholder="Enter phone number">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="full-width">
       <mat-label>Role</mat-label>
       <mat-select formControlName="role">
         <mat-option *ngFor="let role of roles" [value]="role">
