--- a/front-end/src/app/features/customer/customer-list/customer-list.component.html
+++ b/front-end/src/app/features/customer/customer-list/customer-list.component.html
@@ -1,1 +1,34 @@
-<p>customer-list works!</p>
+<div class="customer-list-container">
+  <div class="header">
+    <h1>Customers</h1>
+    <button mat-raised-button color="primary" (click)="openAddCustomerDialog()">
+      <mat-icon>add</mat-icon>
+      Add Customer
+    </button>
+  </div>
+
+  <mat-table [dataSource]="customers" class="mat-elevation-z4">
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{customer.id}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{customer.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+      <mat-header-cell *matHeaderCellDef>Last Name</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{customer.lastName}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+      <mat-cell *matCellDef="let customer">{{customer.email}}</mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
