--- a/front-end/src/app/layout/sidenav/sidenav.component.html
+++ b/front-end/src/app/layout/sidenav/sidenav.component.html
@@ -9,26 +9,31 @@
     <span matListItemTitle>Customers</span>
   </a>
 
-  <a mat-list-item routerLink="/entries" routerLinkActive="active">
-    <mat-icon matListItemIcon>fitness_center</mat-icon>
-    <span matListItemTitle>Gym Entries</span>
-  </a>
-
   <a mat-list-item routerLink="/products" routerLinkActive="active">
     <mat-icon matListItemIcon>inventory_2</mat-icon>
     <span matListItemTitle>Products</span>
   </a>
-
-  <mat-divider></mat-divider>
 
   <a mat-list-item routerLink="/products/inventory" routerLinkActive="active">
     <mat-icon matListItemIcon>inventory</mat-icon>
     <span matListItemTitle>Inventory</span>
   </a>
 
-  <ng-container *ngIf="isManager">
+  <ng-container *ngIf="isManager || isSupervisor">
     <mat-divider></mat-divider>
-    
+    <a mat-list-item routerLink="/entries" routerLinkActive="active">
+      <mat-icon matListItemIcon>fitness_center</mat-icon>
+      <span matListItemTitle>Gym Entry Management</span>
+    </a>
+
+    <a mat-list-item routerLink="/reports" routerLinkActive="active">
+      <mat-icon matListItemIcon>assessment</mat-icon>
+      <span matListItemTitle>Reports</span>
+    </a>
+  </ng-container>
+
+  <ng-container *ngIf="isManager">
+
     <a mat-list-item routerLink="/settings" routerLinkActive="active">
       <mat-icon matListItemIcon>settings</mat-icon>
       <span matListItemTitle>Settings</span>
