--- a/front-end/src/app/features/product/product-list/product-list.component.html
+++ b/front-end/src/app/features/product/product-list/product-list.component.html
@@ -20,6 +20,11 @@
         <mat-cell *matCellDef="let product">{{product.name}}</mat-cell>
       </ng-container>
 
+      <ng-container matColumnDef="barcode">
+        <mat-header-cell *matHeaderCellDef>Barcode</mat-header-cell>
+        <mat-cell *matCellDef="let product">{{product.barcode || 'N/A'}}</mat-cell>
+      </ng-container>
+
       <ng-container matColumnDef="category">
         <mat-header-cell *matHeaderCellDef>Category</mat-header-cell>
         <mat-cell *matCellDef="let product">{{product.category}}</mat-cell>
