--- a/front-end/src/app/features/product/product-list/product-list.component.scss
+++ b/front-end/src/app/features/product/product-list/product-list.component.scss
@@ -2,7 +2,7 @@
   padding: 20px;
 
   .section {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     .header {
       display: flex;
@@ -13,34 +13,39 @@
       h2 {
         margin: 0;
       }
+
+      .button-group {
+        display: flex;
+        gap: 10px;
+      }
+    }
+
+    mat-table {
+      width: 100%;
     }
   }
+}
 
-  mat-table {
-    width: 100%;
-  }
+.mat-column-id {
+  flex: 0 0 80px;
+}
 
-  .mat-column-id {
-    flex: 0 0 80px;
-  }
+.mat-column-price {
+  flex: 0 0 100px;
+}
 
-  .mat-column-price {
-    flex: 0 0 120px;
-  }
+.mat-column-quantity {
+  flex: 0 0 100px;
+}
 
-  .mat-column-quantity {
-    flex: 0 0 100px;
-  }
+.mat-column-duration {
+  flex: 0 0 120px;
+}
 
-  .mat-column-duration {
-    flex: 0 0 120px;
-  }
+.mat-column-maxEntries {
+  flex: 0 0 120px;
+}
 
-  .mat-column-maxEntries {
-    flex: 0 0 120px;
-  }
-
-  .mat-column-entryType {
-    flex: 0 0 150px;
-  }
+.mat-column-entryType {
+  flex: 0 0 120px;
 }
