barcode added to customer dialog

--- a/front-end/src/app/features/customer/add-customer-dialog/add-customer-dialog.component.html
+++ b/front-end/src/app/features/customer/add-customer-dialog/add-customer-dialog.component.html
@@ -38,6 +38,14 @@
         Birth date is required
       </mat-error>
     </mat-form-field>
+
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Barcode</mat-label>
+      <input matInput formControlName="barcode" placeholder="Scan Barcode">
+      <mat-error *ngIf="customerForm.get('barcode')?.hasError('required')">
+        Barcode is required
+      </mat-error>
+    </mat-form-field>
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
