entries and products separated

--- a/front-end/src/app/layout/sidenav/sidenav.component.html
+++ b/front-end/src/app/layout/sidenav/sidenav.component.html
@@ -28,6 +28,12 @@
       <span matListItemTitle>Product Management</span>
     </a>
 
+    <a mat-list-item routerLink="entries/entry-management" routerLinkActive="active">
+      <mat-icon matListItemIcon>fitness_center</mat-icon>
+      <span matListItemTitle>Entry Management</span>
+    </a>
+
+
     <a mat-list-item routerLink="/reports" routerLinkActive="active">
       <mat-icon matListItemIcon>assessment</mat-icon>
       <span matListItemTitle>Reports</span>
